# dorylus

./: .gitignore  collab.config  config_uploader.py  g_dshmachines  kill-all  mounter.py  output.txt  rsa_setter.py  upload.py  w_dshmachines  wserverip
ec2man/: __init__.py
funcs/gcn/: CMakeLists.txt  main.cpp
funcs/gcn/ops/: network_ops.cpp  network_ops.hpp
funcs/hello-world/: main.cpp
funcs/hello-world/ops/: network_ops.cpp
funcs/receiver/: CMakeLists.txt
gnnman/: install-dep  mount.sh  send-source  setup-cluster
gnnman/helpers/: aws-cpp-sdk.install  aws-lambda-runtime.install  blas.install  graphserver.bld  graphserver.install  weightserver.bld  weightserver.install  zmq.install
src/funcs/gcn/: CMakeLists.txt  main.cpp
src/funcs/gcn/ops/: network_ops.cpp
src/funcs/hello-world/: main.cpp
src/funcs/receiver/: main.cpp  upload-func
src/graph-server/: CMakeLists.txt  main.cpp
src/graph-server/commmanager/: commmanager.cpp  lambda_comm.cpp  lambda_comm.hpp  lambdaworker.cpp  lambdaworker.hpp  weight_comm.cpp
src/graph-server/engine/: engine.cpp  utils.cpp
src/graph-server/engine/ops/: gcn_ops.cpp
src/graph-server/nodemanager/: nodemanager.cpp
src/weight-server/: serverworker.cpp  serverworker.hpp  weightserver.cpp
